--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.4.0"
   }
 }
